# oris

./: .gitignore  LICENSE  README.md  pyproject.toml
src/oris/: ORIS_functions.py  compute_synergies.py  config.toml  count_allpaths.py  do_sampling.py  filter_lazy.py  initial_conditions.py  oris_cli.py
